# gurobi

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Makefile  README.md  addpath_gurobi.m.in  download_gurobi.pl  gurobi-config.cmake.in  gurobi-targets.cmake.in  gurobi.pc.in  gurobi_c++-targets.cmake.in  gurobi_c++.pc.in  gurobi_java-targets.cmake.in  install_prereqs.sh  rmpath_gurobi.m.in
gurobi562/linux64/: ReleaseNotes.html  setup.py
gurobi562/linux64/R/: README
gurobi562/linux64/docs/examples/: automated_parameter_tuning.html  build_a_model.html  c_examples.html  callback_c_c.html  callback_cpp_cpp.html  callback_cs_cs.html  callback_java.html  callback_py.html  callback_vb_vb.html  callbacks.html  change_parameters.html  cpp_examples.html  cs_examples.html  custom_py.html  dense_c_c.html  dense_cpp_cpp.html  dense_cs_cs.html  dense_java.html  dense_py.html  dense_vb_vb.html  diagnose_and_cope_with_inf.html  diet2_py.html  diet3_py.html  diet4_py.html  diet_c_c.html  diet_cpp_cpp.html  diet_cs_cs.html  diet_java.html  diet_m.html  diet_py.html  diet_vb_vb.html  dietmodel_py.html  example_source_code.html  example_tour.html  facility_c_c.html  facility_cpp_cpp.html  facility_cs_cs.html  facility_java.html  facility_py.html  facility_vb_vb.html  (+139 more)
gurobi562/linux64/docs/quickstart/: academic_validation.html  attributes.html  c_adding_constraints_to_th.html  c_adding_variables_to_the_.html  c_building_and_running_the.html  c_changing_the_objective_s.html  c_creating_the_environment.html  c_creating_the_model.html  c_error_reporting.html  c_example_details.html  c_example_mip1_c_c.html  c_interface.html  c_optimizing_the_model.html  c_updating_the_model_lazy_.html  changing_parameters.html  client_for_a_compute_serve.html  client_for_a_token_server.html  client_license_file_locati.html  cpp_adding_constraints_to_.html  cpp_adding_variables_to_th.html  cpp_building_and_running_t.html  cpp_creating_the_environme.html  cpp_creating_the_model.html  cpp_error_handling.html  cpp_example_details.html  cpp_example_mip1_cpp_cpp.html  cpp_interface.html  cpp_optimizing_the_model.html  cpp_reporting_results_attr.html  cpp_setting_the_objective.html  cpp_updating_the_model_laz.html  creating_a_client_license.html  creating_a_new_trial_or_ac.html  cs_adding_constraints_to_t.html  cs_adding_variables_to_the.html  cs_building_and_running_th.html  cs_cleaning_up.html  cs_creating_the_environmen.html  cs_creating_the_model.html  cs_error_handling.html  (+107 more)
gurobi562/linux64/docs/refman/: administrative_commands.html  aggfill.html  aggregate.html  attribute_descriptions_lin.html  attribute_descriptions_mod.html  attribute_descriptions_qua.html  attribute_descriptions_qua2.html  attribute_descriptions_sos.html  attribute_descriptions_var.html  attributes.html  barconvtol.html  barcorrectors.html  barhomogeneous.html  baritercount.html  bariterlimit.html  barorder.html  barqcpconvtol.html  barrier_logging.html  bas_format.html  boundsvio.html  boundsvioindex.html  boundsviosum.html  boundvio.html  boundvioindex.html  boundviosum.html  branchdir.html  branchpriority.html  c_advanced_simplex_routine.html  c_attribute_management.html  c_details.html  c_environment_creation_and.html  c_error_handling.html  c_grbaddconstr.html  c_grbaddconstrs.html  c_grbaddqconstr.html  c_grbaddqpterms.html  c_grbaddrangeconstr.html  c_grbaddrangeconstrs.html  c_grbaddsos.html  c_grbaddvar.html  (+915 more)
gurobi562/linux64/examples/R/: lp.R  lp2.R  mip.R  qcp.R  qp.R
gurobi562/linux64/examples/c/: callback_c.c  dense_c.c  diet_c.c  facility_c.c  feasopt_c.c  fixanddive_c.c  lp_c.c  lpmethod_c.c  lpmod_c.c  mip1_c.c  mip2_c.c  params_c.c  qcp_c.c  qp_c.c  sensitivity_c.c  sos_c.c  sudoku_c.c  tsp_c.c  tune_c.c  workforce1_c.c  workforce2_c.c  workforce3_c.c  workforce4_c.c
gurobi562/linux64/examples/c#/: callback_cs.cs  dense_cs.cs  diet_cs.cs  facility_cs.cs  feasopt_cs.cs  fixanddive_cs.cs  lp_cs.cs  lpmethod_cs.cs  lpmod_cs.cs  mip1_cs.cs  mip2_cs.cs  params_cs.cs  qcp_cs.cs  qp_cs.cs  sensitivity_cs.cs  sos_cs.cs  sudoku_cs.cs  tsp_cs.cs  tune_cs.cs  workforce1_cs.cs  workforce2_cs.cs  workforce3_cs.cs  workforce4_cs.cs
gurobi562/linux64/examples/c++/: callback_c++.cpp  diet_c++.cpp  feasopt_c++.cpp  fixanddive_c++.cpp  lp_c++.cpp  lpmethod_c++.cpp  lpmod_c++.cpp  mip1_c++.cpp  mip2_c++.cpp  params_c++.cpp  qcp_c++.cpp  qp_c++.cpp  sensitivity_c++.cpp  sos_c++.cpp  tsp_c++.cpp  tune_c++.cpp  workforce1_c++.cpp  workforce2_c++.cpp  workforce3_c++.cpp  workforce4_c++.cpp
gurobi562/linux64/examples/java/: Callback.java  Dense.java  Diet.java  Facility.java  Feasopt.java  Fixanddive.java  Lp.java  Lpmethod.java  Lpmod.java  Mip1.java  Mip2.java  Params.java  Qcp.java  Qp.java  Sensitivity.java  Sos.java  Sudoku.java  Tsp.java  Tune.java  Workforce1.java  Workforce2.java  Workforce3.java  Workforce4.java
gurobi562/linux64/examples/matlab/: diet.m  linprog.m  lp.m  lp2.m  mip1.m  qcp.m  qp.m  sos.m
gurobi562/linux64/examples/python/: callback.py  custom.py  dense.py  diet.py  diet2.py  diet3.py  diet3a.py  diet4.py  dietmodel.py  facility.py  feasopt.py  fixanddive.py  lp.py  lpmethod.py  lpmod.py  mip1.py  mip2.py  netflow.py  params.py  qcp.py  qp.py  sensitivity.py  sos.py  sudoku.py  tsp.py  tune.py  workforce1.py  workforce2.py  workforce3.py  workforce4.py
gurobi562/linux64/examples/vb/: callback_vb.vb  dense_vb.vb  diet_vb.vb  facility_vb.vb  feasopt_vb.vb  fixanddive_vb.vb  lp_vb.vb  lpmethod_vb.vb  lpmod_vb.vb  mip1_vb.vb  mip2_vb.vb  params_vb.vb  qcp_vb.vb  qp_vb.vb  sensitivity_vb.vb  sos_vb.vb  sudoku_vb.vb  tsp_vb.vb  tune_vb.vb  workforce1_vb.vb  workforce2_vb.vb  workforce3_vb.vb  workforce4_vb.vb
gurobi562/linux64/include/: gurobi_c.h
gurobi562/linux64/lib/: gurobi.py
gurobi562/linux64/matlab/: gurobi.m  gurobi.mexa64  gurobi_read.mexa64  gurobi_setup.m  gurobi_write.mexa64
test/: CMakeLists.txt
